2017-04-19 Added playing, stop, end, pause events for slide show addon.
2017-04-12 Added dontMoveModules parameter to outstretchHeight command.
2017-04-07 Added allow fullscreen property to iFrame addon.
2017-04-04 Added changes in Variable Storage module
2017-04-04 Fixed adding hovering class in Reset module
2017-04-04 Added changes in page list.
2017-04-04 Fixed problem with reseting module after closing Popup in Paragraph module
2017-04-03 Fixed problem with not initialized eKeyboard while calling eKeyboard command.
2017-03-29 Fixed getting state in Paragraph module
2017-03-29 Fixed scrolling screen on iOS in Drawing module
2017-03-29 Added counting score from provided modules in Limited Check module
2017-03-27 Removed unused logo library
2017-03-27 Fixed problem with Z-Index in Programming Command Prompt
2017-03-23 Fixed removing chapters
2017-03-21 Added changes to PieChart module
2017-03-21 Changed getting parent chapter
2017-03-16 Added missing labels
2017-03-16 Added full screen mode and disable full screen property in YouTube module
2017-03-15 Fixed resetting bookmarks and added moveToPreviousPage and moveToNextPage commands in Assessment Navigation Bar module
2017-03-13 Added filled gap in Table module
2017-03-10 Fixed problem with zoom on iPhone in Paragraph module
2017-03-08 Fixed test in Table module
2017-03-08 Fixed tests in Math and Table modules
2017-03-08 Fixed rendering LaTeX in draggable gaps in Table module
2017-03-03 Fixed executing code after checking, showing and resetting answers in Grid Scene module
2017-03-02 Added current-page class in Table of Contents module
2017-03-02 Fixed working in popup in eKeyboard module
2017-02-27 Fixed expressions with white spaces in Math module
2017-02-27 Added showCloseButton command in eKeyboard module
2017-02-24 Fixed parsing expressions in Math module
2017-02-24 Fixed scoring when placeholder text is the same as correct answer in Text module
2017-02-24 Fixed removing hover styles in Popup Button module