@@ -34,4 +34,5 @@ public interface IPlayerCommands {
 	void showPopup(String pageName, String top, String left,
 			String additionalClasses);
 	void updateCurrentPageScoreWithMistakes(int mistakes);
+	int getIframeScroll();
 }
