@@ -150,5 +150,11 @@ public class CommandsMockup implements IPlayerCommands {
 		// TODO Auto-generated method stub
 		
 	}
+
+	@Override
+	public int getIframeScroll() {
+		// TODO Auto-generated method stub
+		return 0;
+	}
 	
 }
